--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "support-desk",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.18.1"
+  },
   "description": "Support ticket app",
   "main": "server.js",
   "scripts": {
@@ -8,7 +11,7 @@
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend & npm run build --prefix frontend"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "kang myung hun",
   "license": "MIT",
